# ChromaShift

./: .env.example  .gitignore  README.md  SECURITY.md  demo.ipynb  docker-compose.yml
.github/workflows/: ci.yml
ai/: .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt
ai/datasets/curated_transunet/: val
ai/notebooks/: CVD_Phase2_Model_Development_v1.ipynb
ai/scripts/: download_datasets.py  export_mobilesam.py  export_mobilevit.py  export_onnx.py  onnx_export_utils.py  quantize_models.py
ai/src/algorithms/: __init__.py  color_remapping.py  temporal_coherence.py
ai/src/data/: dataset.py
ai/src/models/: __init__.py  cvd_models.py  dit_processor.py  pix2pix.py  temporal_smoothing.py  transunet.py
ai/src/training/: loss.py  train_pix2pix.py  train_transunet.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.hf  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 36cbaf3fa4fc_add_share_id.py  52691b452401_initial.py  66d03520679a_replace_email_with_username.py  a6fdf9e28dc5_add_task6.py  e8fdf9e28dc6_add_selected_mode.py  f130000867d7_add_cvd_type_and_severity_to_media_jobs.py  f28ade34eaed_add_telemetry_fields.py
backend/app/: main.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  compliance.py  inference.py  media.py  profile.py  research.py
backend/app/core/: config.py  limiter.py  security.py
backend/app/db/: models.py  session.py
backend/app/services/: cleanup.py  color_clustering.py  compliance_analyzer.py  inference.py  media_processor.py  storage.py
backend/src/app/: main.py
backend/src/services/: inference.py
backend/tests/: test_auth.py  test_compliance.py  test_media_processor.py  test_profile.py  test_research.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vercel.json
frontend/public/: pcb_wiring_schematic.avif  robots.txt  sitemap.xml
frontend/public/models/: yolo26n-seg_int8.onnx
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AboutPage.tsx  AdminAnalytics.tsx  BeforeAfterSlider.tsx  CalibrationWizard.tsx  CameraView.tsx  ClientSideVideoProcessor.tsx  ComplianceReportModal.tsx  DashboardHistory.tsx  DragDropUpload.tsx  LandingPage.tsx  LogoIcon.tsx  OnboardingTour.tsx  PrivacyPolicyPage.tsx  PromoteModal.tsx  ProtectedRoute.tsx  SurveyWizard.tsx  VisionTest.tsx  WorkflowSidebar.tsx  WorkspaceStudio.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/auth/: EmailVerification.tsx  (+2 more)
frontend/src/services/: ai_preview.ts  api.ts  compliance.ts  fallback_slic.ts  media.ts  profile.ts  supabase.ts
frontend/src/styles/: animations.css  components.css  design-tokens.css  reset.css  typography.css
(+1 files in other folders)
