[project]
name = "cvd-ai"
version = "0.1.0"
description = "AI/ML Model Development for Google Antigravity CVD Platform"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "opencv-python>=4.10.0",
    "transformers>=4.41.0",
    "ultralytics>=8.2.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "tqdm>=4.66.0",
    "albumentations>=1.4.0",
    "pillow>=10.3.0",
    "scipy>=1.13.0",
    "timm>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    "pytest>=8.2.0",
    "black>=24.4.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "cvd-ai"
version = "0.1.0"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"