[project]
name = "cvd-ai"
version = "0.1.0"
description = "AI/ML Model Development for ChromaShift Platform"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "opencv-python>=4.10.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    "pytest>=8.2.0",
    "black>=24.4.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "cvd-ai"
version = "0.1.0"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.hatch.build.targets.wheel]
packages = ["src/algorithms", "src/data", "src/models", "src/training"]