[project]
name = "backend"
version = "0.1.0"
description = "Backend API for ChromaShift Platform"
requires-python = "^3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "boto3>=1.34.120",
    "httpx (>=0.28.1,<0.29.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "onnxruntime (>=1.25.0,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"